<resources>
    <string name="app_name">Flunky Stats</string>
    <string name="spieler">Spieler</string>
    <string name="teams">Teams</string>
    <string name="matches">Matches</string>
    <string name="turniere">Turniere</string>
    <string name="placholder_spieler_name">Spieler Name</string>
    <string name="name_colon">Name:</string>
    <string name="teams_colon">Teams:</string>
    <string name="placeholder_99_9">99.9%</string>
    <string name="trefferquote_colon">Trefferquote:</string>
    <string name="placeholder_3_12">3,12</string>
    <string name="durchschnittliche_schluecke_colon">Durchschn. Schlücke:</string>
    <string name="placeholder_99">99</string>
    <string name="spiele_siege_colon">Spiele / Siege:</string>
    <string name="turniere_siege_colon">Turniere / Siege:</string>
    <string name="placeholder_id">ID:</string>
    <string name="placeholder_team_name">Team Name</string>
    <string name="mitglieder_colon">Mitglieder:</string>
    <string name="placeholder_name_of_member2">Name of\nMember2</string>
    <string name="placeholder_name_of_member1">Name of\nMember1</string>
    <string name="change_this">change this</string>
    <string name="addPlayerDialogTitle">Spieler Hinzufügen:</string>
    <string name="addPlayerDialogHint">Spieler Name</string>
    <string name="addTeamDialogTitle">Team Hinzufügen:</string>
    <string name="addTeamDialogHint">Team Name</string>
    <string name="header">Header:</string>
    <string name="settings">Settings</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="popup_menu">Popup Menu</string>
    <string name="sum_menu">Sub Menu</string>
    <string name="suche">Suche</string>
    <string name="filter">Filter:</string>
    <string name="rankings">Rankings</string>
    <string name="ok">OK</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="todo">TODO</string>
    <string name="spiele">Spiele</string>
    <string name="rangliste">Rangliste</string>
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="tab_title_hits">Treffer</string>
    <string name="tab_title_slugs">Schlücke</string>
    <string name="tab_title_matches">Spiele</string>
    <string name="tab_title_tourn">Turniere</string>
    <string name="title_activity_rankings">Ranglisten</string>
    <string name="placeholder_stat">Stat</string>
    <string name="hashtag">#</string>
    <string name="name">Name</string>
    <string name="quote">Quote</string>
    <string name="header_wins">Siege</string>
    <string name="header_shots">Würfe</string>
    <string name="header_hits">Treffer</string>
    <string name="header_matches">Spiele</string>
    <string name="heade_tourn">Turn.</string>
    <string name="header_slugs">Ø Schlücke</string>
    <string name="vs">VS</string>
    <string name="placeholder_match_card_info">Werkstattmeisterschaft 20, Spiel 15</string>
    <string name="wuerfe">Würfe</string>
    <string name="treffer">Treffer</string>
    <string name="schluecke">Schlücke</string>
    <string name="sieger">Sieger</string>
    <string name="spiel">"Spiel: "</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="bearbeiten">Bearbeiten</string>
    <string name="loeschen">Löschen</string>
    <string name="add_player">Spieler Hinzufügen</string>
    <string name="_0p">0%</string>
    <string name="name_ndern">Name ändern</string>

</resources>