<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundMidDark"
    android:paddingBottom="4dp">

    <Button
        android:id="@+id/btn_add_dialog_ok"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/background"
        android:text="@string/ok"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_add_dialog_cacel"
        app:layout_constraintTop_toBottomOf="@+id/et_add_dialog_p" />

    <Button
        android:id="@+id/btn_add_dialog_cacel"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/background"
        android:text="@string/abbrechen"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_add_dialog_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_add_dialog_p" />

    <EditText
        android:id="@+id/et_add_dialog_p"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>