<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="12dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="12dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="6dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_stats_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/clickable"
        android:paddingBottom="4dp">

        <TextView
            android:id="@+id/tv_stats_card_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/header"
            android:textAllCaps="true"
            android:textColor="@color/text_secondary_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_card_stats_tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="@string/placeholder_99"
            android:textColor="@color/text_primary_dark"
            android:textSize="36sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_card_stats_tv2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider4"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="8dp"
            android:background="@color/backgroundDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_card_stats_tv2"
            app:layout_constraintStart_toEndOf="@+id/tv_card_stats_tv1"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_card_stats_tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/placholder_spieler_name"
            android:textColor="@color/text_primary_dark"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_card_stats_tv1"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>