<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundDarker"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_table_numb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:text="@string/hashtag"
                android:textColor="@color/text_primary_dark"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_table_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/placholder_spieler_name"
                android:textColor="@color/text_primary_dark"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:drawableTint="@color/text_mid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_table_stat1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/placeholder_stat"
                android:textColor="@color/text_primary_dark"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:drawableLeftCompat="@drawable/ic_table_sort_arrows"
                app:drawableTint="@color/text_mid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_table_stat2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/placeholder_stat"
                android:textColor="@color/text_primary_dark"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:drawableLeftCompat="@drawable/ic_table_sort_arrows"
                app:drawableTint="@color/text_mid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingTop="4dp"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tv_table_stat3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/placeholder_stat"
                android:textColor="@color/text_primary_dark"
                android:textSize="18sp"
                app:autoSizeMaxTextSize="18sp"
                app:autoSizeMinTextSize="12sp"
                app:autoSizeStepGranularity="2sp"
                app:autoSizeTextType="uniform"
                app:drawableLeftCompat="@drawable/ic_table_sort_arrows"
                app:drawableTint="@color/text_mid"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>